<resources>
    <string name="app_name">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="new_note">New Note</string>
    <string name="title">Title</string>
    <string name="back_icon">Back Icon</string>
    <string name="save_icon">Save Icon</string>
    <string name="note">Note</string>
    <string name="delete_icon">delete icon</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_note_message">Are you sure you want to delete this note?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="discard_icon">discard icon</string>
    <string name="discard_note_message">Are you sure you want to discard this note?</string>
    <string name="discard">Discard</string>
    <string name="discard_note">Discard Note</string>
</resources>