<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/discard_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/grey_light"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_12sdp"
    app:cardCornerRadius="@dimen/_5sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/close_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:contentDescription="@string/discard_icon"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/discard_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="@dimen/_8sdp"
            android:contentDescription="@string/discard_icon"
            android:src="@drawable/ic_discard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/close_icon"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:includeFontPadding="false"
            android:text="@string/discard_note"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="@+id/discard_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/discard_icon"
            app:layout_constraintTop_toTopOf="@+id/discard_icon" />

        <TextView
            android:id="@+id/discard_note_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:includeFontPadding="false"
            android:text="@string/discard_note_message"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@+id/discard_icon" />

        <TextView
            android:id="@+id/discard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:includeFontPadding="false"
            android:padding="@dimen/_5sdp"
            android:text="@string/discard"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/discard_note_message" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:includeFontPadding="false"
            android:padding="@dimen/_5sdp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/discard"
            app:layout_constraintTop_toBottomOf="@+id/discard_note_message" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>